test/errors/png-open/png-open.rom
Error in `png-open.asm` on line 1: Could not open `png-open.png`
